--- a/nginx/conf.d/server.conf
+++ b/nginx/conf.d/server.conf
@@ -1,5 +1,5 @@
 server {
-    server_name auth;
+    server_name map-service;
     listen 80;
 
     location /api/auth {
@@ -12,8 +12,23 @@ server {
         proxy_pass http://user-service:8080;
     }
 
-        location /api/avatars {
+    location /api/avatars {
         rewrite ^/api/avatars(.*) /avatars$1 break;
         proxy_pass http://user-service:8080;
+    }
+
+    location /api/layers {
+        rewrite ^/api/layers(.*) /layers$1 break;
+        proxy_pass http://map-service:8080;
+    }
+
+    location /api/tags {
+        rewrite ^/api/tags(.*) /tags$1 break;
+        proxy_pass http://map-service:8080;
+    }
+
+    location /api/search {
+        rewrite ^/api/search(.*) /search$1 break;
+        proxy_pass http://map-service:8080;
     }
 }
