git add frontend

--- a/elk-config/logstash/logs.conf
+++ b/elk-config/logstash/logs.conf
@@ -10,6 +10,12 @@ input {
         path => ["/app/logs/user-service.log"]
         start_position => "beginning"
     }
+
+    file {
+        type => "map-service"
+        path => ["/app/logs/map-service.log"]
+        start_position => "beginning"
+    }
 }
 
 filter {
