--- a/nginx/conf.d/server.conf
+++ b/nginx/conf.d/server.conf
@@ -2,6 +2,13 @@ server {
     server_name map-service;
     listen 80;
 
+    root /usr/share/nginx/html;
+    index index.html;
+
+    location / {
+        try_files $uri $uri/ /index.html;
+    }
+
     location /api/auth {
         rewrite ^/api/auth(.*) /auth$1 break;
         proxy_pass http://auth-service:8080;
