--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,24 +22,6 @@ services:
     environment:
       REDIS_PASSWORD: redis
 
-  nginx:
-    image: nginx:latest
-    container_name: nginx
-    environment:
-      - TZ="Europe/Moscow"
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./nginx/conf.d:/etc/nginx/conf.d
-    depends_on:
-      auth-service:
-        condition: service_healthy
-      user-service:
-        condition: service_healthy
-      map-service:
-        condition: service_healthy
-
   minio:
     image: minio/minio
     container_name: minio
@@ -200,6 +182,24 @@ services:
       interval: 20s
       timeout: 5s
       retries: 5
+  
+  frontend:
+    build: frontend/
+    container_name: frontend
+    environment:
+      - TZ="Europe/Moscow"
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/conf.d:/etc/nginx/conf.d
+    depends_on:
+      auth-service:
+        condition: service_healthy
+      user-service:
+        condition: service_healthy
+      map-service:
+        condition: service_healthy
 
 volumes:
   database: {}
