--- a/nginx/conf.d/server.conf
+++ b/nginx/conf.d/server.conf
@@ -38,4 +38,9 @@ server {
         rewrite ^/api/search(.*) /search$1 break;
         proxy_pass http://map-service:8080;
     }
+
+    location /api/docs {
+        rewrite ^/api/docs(.*) / break;
+        proxy_pass http://swagger:8080;
+    }
 }
